# bzero-api

./: .dockerignore  .env  .env.template  .env.test  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  pyproject.toml  ruff.toml
.claude/agents/: bzero-code-reviewer.md  bzero-test-writer.md
docker/postgres/: init.sql
docs/: CHAT_DEMO_GUIDE.md  authentication-flow.md  checklist.md  domain-model.md  erd.md
migrations/: env.py
migrations/versions/: 019aa594c20e_0002_create_city.py  0512ec73b9ed_0008_add_base_cost_points_and_base_.py  08797d4b4a62_0001_create_user.py  1cfafe0b369e_0003_create_pointtransaction.py  228808d53917_0002_create_pointtransaction.py  282e91370e30_0004_create_useridentity.py  2e9f761e7765_0015_create_cityquestion.py  442b2cf6617e_0007_create_diary_and_questionnaire.py  6ded77394e5c_0016_create_questionnaire.py  6f8a12b3c4d5_create_diary_table.py  712a85aaef6b_0012_create_diary.py  7914a808fe83_0009_create_guesthouse.py  9b94381f2c77_0005_create_airship.py  a1b2c3d4e500_0015_create_direct_message_room.py  a1b2c3d4e500_0017_create_direct_message_room.py  a1b2c3d4e5f6_0012_create_conversation_card.py  b2373b2f3b2e_remove_phase_column_from_cities_table.py  b2c3d4e5f600_0016_create_direct_message.py  b2c3d4e5f600_0018_create_direct_message.py  b51e99124367_0008_create_taskfailurelog.py  b6530ca16627_0010_create_room.py  d07e6829dd95_0006_create_ticket.py  d2c76d767f7e_0011_create_roomstay.py  f6e5d4c3b2a1_0013_create_chat_message.py  fd76fc635285_0014_create_diary.py
scripts/: create_demo_room.py  fix_alembic_version.py  recreate_test_db.py  reset_db.py  seed_airships.py  seed_cities.py  seed_city_questions.py  seed_conversation_cards.py  seed_guest_houses.py  test_chat_socketio.py
src/bzero/: main.py
src/bzero/core/: config.py  database.py  loggers.py  redis.py  settings.py
src/bzero/domain/: errors.py  value_objects.py
static/: chat_demo.html
tests/: conftest.py  temporary_debug_uuid.py
tests/e2e/: test_chat_socketio_e2e.py
(+310 files in other folders)
